[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/CharacterDisplayer.gd" type="Script" id=1]
[ext_resource path="res://Characters/Sophia/sophia_neutral.png" type="Texture" id=2]
[ext_resource path="res://Characters/Dani/dani_neutral.png" type="Texture" id=3]

[node name="CharacterDisplayer" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 1920.49 ]
}

[node name="LeftCenter" type="Sprite" parent="."]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
position = Vector2( 560.631, 659.441 )
texture = ExtResource( 2 )

[node name="Left" type="Sprite" parent="."]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
position = Vector2( 279.836, 655.203 )
texture = ExtResource( 2 )

[node name="RightCenter" type="Sprite" parent="."]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
position = Vector2( 1417.01, 655.203 )
texture = ExtResource( 3 )
flip_h = true

[node name="Right" type="Sprite" parent="."]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
position = Vector2( 1664.01, 655.203 )
texture = ExtResource( 3 )
flip_h = true

[node name="Tween" type="Tween" parent="."]
